develop/fix: fixed path for swagger
