# internal/transport/http/v1/users.go
@@ -35,7 +35,7 @@ type signUpResponse struct {
 
 // @Summary User SignUp
 // @Description create user account
-// @Tags users-auth
+// @Tags auth
 // @Accept json
 // @Produce json
 // @Param input body signUpInput true "input"
@@ -43,7 +43,7 @@ type signUpResponse struct {
 // @Failure 400 {object} errorResponse
 // @Failure 409 {object} errorResponse
 // @Failure 500 {object} errorResponse
-// @Router /users/sign-up [post]
+// @Router /api/v1/users/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var input signUpInput
 	if err := c.BindJSON(&input); err != nil {
@@ -75,14 +75,14 @@ type tokenResponse struct {
 
 // @Summary User SignIn
 // @Description user sign in
-// @Tags users-auth
+// @Tags auth
 // @Accept json
 // @Produce json
 // @Param input body signInInput true "input"
 // @Success 200 {object} tokenResponse
 // @Failure 400 {object} errorResponse
 // @Failure 500 {object} errorResponse
-// @Router /users/sign-in [post]
+// @Router /api/v1/users/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var input signInInput
 	if err := c.BindJSON(&input); err != nil {
@@ -106,13 +106,13 @@ func (h *Handler) signIn(c *gin.Context) {
 
 // @Summary User Refresh Token
 // @Description refresh user's access token
-// @Tags users-auth
+// @Tags auth
 // @Produce json
 // @HeaderParam Set-Cookie string true "RefreshToken"
 // @Success 200 {object} tokenResponse
 // @Failure 400 {object} errorResponse
 // @Failure 500 {object} errorResponse
-// @Router /users/refresh [get]
+// @Router /api/v1/users/refresh [get]
 func (h *Handler) refresh(c *gin.Context) {
 	refreshToken, err := c.Cookie("refresh-token")
 	if err != nil {
@@ -147,7 +147,7 @@ type getActiveSegmentsResponse struct {
 // @Success 200 {object} getActiveSegmentsResponse
 // @Failure 400 {object} errorResponse
 // @Failure 500 {object} errorResponse
-// @Router /users/active_segments/:user_id [get]
+// @Router /api/v1/users/active_segments/:user_id [get]
 func (h *Handler) getActiveSegments(c *gin.Context) {
 	paramId := strings.Trim(c.Param("user_id"), "/")
 	id, err := strconv.Atoi(paramId)
